# Chucho

./: .gitignore  AddArchive.cmake  BuildOptions.cmake  CMakeLists.txt  Configure.cmake  INSTALL  README.md  SECURITY_POLICY  activemq_writer.cpp  activemq_writer_factory.cpp  activemq_writer_memento.cpp  async_writer.cpp  async_writer_factory.cpp  async_writer_memento.cpp  bzip2_compressor.cpp  bzip2_compressor_factory.cpp  bzip2_compressor_memento.cpp  bzip2_file_compressor.cpp  bzip2_file_compressor_factory.cpp  c_activemq_writer.cpp  c_async_writer.cpp  c_bzip2_compressor.cpp  c_bzip2_file_compressor.cpp  c_capn_proto_serializer.cpp  c_cerr_writer.cpp  c_compressor.cpp  c_configuration.cpp  c_cout_writer.cpp  c_db2_writer.cpp  c_diagnostic_context.cpp  c_duplicate_message_filter.cpp  c_email_trigger.cpp  c_email_writer.cpp  c_file_compressor.cpp  c_file_descriptor_writer.cpp  c_file_roll_trigger.cpp  c_file_roller.cpp  c_file_writer.cpp  c_filter.cpp  c_finalize.cpp  (+253 more)
cmake/: BuildOptions.cmake  ChuchoFindPackage.cmake  ChuchoFindProgram.cmake  ChuchoGeneratePkgConfigFile.cmake  ChuchoProcessPkgDeps.cmake  ChuchoRequireSymbols.cmake  Configure.cmake  FindCapnProto.cmake  FindFlatbuffers.cmake  UpdateGtestForMsvc.cmake
config-tool/: CMakeLists.txt  emittable.hpp
config-tool/common/: CMakeLists.txt  cout_writer_emitter.cpp  cout_writer_emitter.hpp  duplicate_message_filter_emitter.cpp  duplicate_message_filter_emitter.hpp  emitter.cpp  emitter.hpp  filter_emitter.cpp  filter_emitter.hpp  formatter_emitter.cpp  formatter_emitter.hpp  level_filter_emitter.cpp  level_filter_emitter.hpp  logger_emitter.cpp  logger_emitter.hpp  pattern_formatter_emitter.cpp  pattern_formatter_emitter.hpp  properties.cpp  properties.hpp  writer_emitter.cpp  writer_emitter.hpp
config-tool/curses/: CMakeLists.txt  cancellable.cpp  cancellable.hpp  chucho_curses.h  chucho_keys.hpp  controller.cpp  controller.hpp  logger_win.cpp  logger_win.hpp  loggers_win.cpp  loggers_win.hpp  main.cpp  pop_up_win.cpp  pop_up_win.hpp  scrollable.cpp  scrollable.hpp  util.cpp  util.hpp  win_size.hpp
config-tool/qt/: CMakeLists.txt  boolean_editable_item.cpp  boolean_editable_item.hpp  brain.cpp  brain.hpp  cerr_writer_item.hpp  chucho.qrc  chucho.ui  cout_writer_item.cpp  cout_writer_item.hpp  creator_from_list_item.cpp  creator_from_list_item.hpp  creator_item.cpp  creator_item.hpp  editable_item.cpp  editable_item.hpp  emittable.cpp  emittable.hpp  file_writer_item.cpp  file_writer_item.hpp  filter_creator_item.cpp  filter_creator_item.hpp  filter_item.hpp  from_list_editable_item.cpp  from_list_editable_item.hpp  level_editable_item.cpp  level_editable_item.hpp  level_threshold_filter_item.cpp  level_threshold_filter_item.hpp  logger_creator_item.cpp  logger_creator_item.hpp  logger_editable_item.cpp  logger_editable_item.hpp  logger_editor.cpp  logger_editor.hpp  logger_emittable.cpp  logger_emittable.hpp  logger_win_controller.cpp  logger_win_controller.hpp  main.cpp  (+12 more)
doc/: config_ref.hpp  doxygen.conf.in  main_page.hpp
embedded/include/: .fnv.h.swp  fnv.h  longlong.h  yaml.h
include/chucho/: activemq_writer.h  activemq_writer.hpp  activemq_writer_factory.hpp  activemq_writer_memento.hpp  async_writer.h  async_writer.hpp  async_writer_factory.hpp  async_writer_memento.hpp  bzip2_compressor.h  bzip2_compressor.hpp  bzip2_compressor_factory.hpp  bzip2_file_compressor.h  (+324 more)
log-server/: CMakeLists.txt  chuchod.yaml.sample  daemon.hpp  eof_exception.cpp  eof_exception.hpp  is_shut_down.cpp  is_shut_down.hpp  log.cpp  log.hpp  main.cpp  properties.cpp  properties.hpp  selector.cpp  selector.hpp  signal_handler.hpp  single_instance.hpp  socket_life_cycle.hpp  socket_listener.hpp  socket_reader.cpp  socket_reader.hpp  suzerain.cpp  suzerain.hpp  vassals.cpp  vassals.hpp
log-server/platform/bsd/: InstallService.cmake.in  UninstallService.cmake.in  chuchod.in
log-server/platform/linux/: InstallSystemdService.cmake.in  InstallUpstartService.cmake.in  UninstallSystemdService.cmake.in  UninstallUpstartService.cmake.in  systemd.service.in  upstart.conf.in
log-server/platform/macintosh/: InstallService.cmake.in  UninstallService.cmake.in  daemon_macintosh.cpp  org.chucho-log.chuchod.plist.in  org.chucho.chuchod.plist.in  socket_listener_macintosh.cpp
log-server/platform/posix/: daemon_posix.cpp  log_posix.cpp  selector_posix.cpp  signal_handler_posix.cpp  single_instance_posix.cpp  socket_life_cycle.cpp  socket_listener_posix.cpp  socket_reader_posix.cpp
log-server/platform/solaris/: InstallService.cmake.in  UninstallService.cmake.in  smf-manifest.xml.in
log-server/platform/windows/: InstallService.cmake.in  UninstallService.cmake.in  daemon_windows.cpp  error_message.cpp  error_message.hpp  log_windows.cpp  selector_windows.cpp  signal_handler_windows.cpp  single_instance_windows.cpp  socket_life_cycle.cpp  socket_listener_windows.cpp  socket_reader_windows.cpp
protobuf/: chucho.proto
serialization/: chucho.capnp  chucho.fbs  chucho.proto  chucho_generated.h
sql/: db2.sql  mysql.sql  oracle.sql  postgres.sql  sqlite.sql
test/: CMakeLists.txt  Check.cmake  CheckAllConfigs.cmake  activemq_writer_test.c  activemq_writer_test.cpp  activemq_writer_test.h  activemq_writer_test_helper.cpp  async_writer_test.c  async_writer_test.cpp  async_writer_test.h  bzip2_compressor_test.cpp  bzip2_file_compressor_test.cpp  c_test.cpp  c_test_helper.c  cache_and_release_filter_test.cpp  calendar_test.cpp  capn_proto_serializer_test.cpp  cerr_writer_test.c  cerr_writer_test.h  chucho_config_file_configurator_test.cpp  cloudwatch_writer_test.cpp  compressing_writer_test.cpp  configuration_off.cpp  configuration_test.c  configuration_test.cpp  configuration_test.h  configurator_test.cpp  configurator_test.hpp  cout_writer_test.c  cout_writer_test.h  database_writer_test.cpp  db2_writer_test.c  db2_writer_test.cpp  db2_writer_test.h  diagnostic_context_test.c  diagnostic_context_test.cpp  diagnostic_context_test.h  door_writer_test.c  door_writer_test.cpp  door_writer_test.h  (+135 more)
util/: change-copyright.awk  change-copyright.sh
(+56 files in other folders)
